--- a/file sorter.ipynb
+++ b/file sorter.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = r\"C:/Users/osama/Desktop/sameer/google certification vids/\""
+    "path = r\"C:/Users/Desktop/sameer/google certification vids/\ # add user name to this later""
    ]
   },
   {
